# advanced-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DIFY_RAG_GUIDE.md  HANDOFF.md  README.md  README_GNN.md  package-lock.json  package.json  pyproject.toml  requirements.txt  walkthrough.md  启动RAG服务.bat
.agents/: AGENTS.md
.claude/handoffs/: 2026-07-02-201301-gnn-rag-refactor.md  2026-07-02-201606-gnn-pr-refactoring.md  2026-07-10-212901-integrate-markitdown.md  2026-07-10-215815-markitdown-integration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ci-debug-lessons.md  ci-lessons-learned.md  index.md  intro.md
docs/.vitepress/: config.js
docs/deploy/: dify-guide.md
docs/evaluation/: gnn_ablation.md
docs/gnn/: README.md
docs/poiclaw/: goal.md  intro.md  parser.md  sandbox.md  (+1 more)
scripts/: start-asr.bat  start-rag.bat
src/: app.py  benchmark.py  coordinator.py  database.py  embedding.py  graph_search.py  import_obsidian.py  loader.py  log_cleaner.py  reranker.py  splitter.py
tests/: conftest.py  disguise_book_generator.py  evaluate_results.py  evaluation_set_generator.py  evaluation_set_generator_graph.py  run_pipeline.py  run_retrieval.py  test_app.py  test_coordinator.py  test_database.py  test_database_graph.py  test_disguise_generator.py  test_embedding.py  test_graph_search.py  test_loader.py  test_ppr_thresholds.py  test_reranker.py  test_retrieval_imports.py  test_splitter.py
wiki/: _sidebar.md  architecture.md  dependencies.md  index.md  reading-guide.md
(+37 files in other folders)
